<resources>
    <string name="app_name">EasyForm</string>
    <string name="select_organization">Select organization from the list</string>

    <string name="o_email">Organization email address</string>
    <string name="s_id">Office ID</string>
    <string name="s_name">FullName</string>
    <string name="o_name">Organization Name</string>
    <string name="s_address">Permanent address</string>
    <string name="o_pan">PAN code</string>
    <string name="reg_org">Registered Organizations</string>
    <string name="o_address">Organization Address</string>
    <string name="creaate_pass">Create new password</string>
    <string name="confirm_pass">Confirm Password</string>

    <string name="home">Home</string>
    <string name="logout">Log Out</string>
    <string name="click_ph">Click Photo</string>
    <string name="select_ph">Select Photo</string>
    <string name="no_org">We don\'t have any registered organizations</string>
    <string name="no_history">No history till now.</string>
    <string name="cancel">Cancel</string>
    <string name="org">Organization</string>
    <string name="fired">Fired</string>
    <string name="all">All</string>
    <string name="chat">let\'s chat....</string>

    <string name="signin">Sign In</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender :</string>
    <string name="others">Others</string>
    <string name="title_signin">Sign In to your Account</string>
    <string name="title_create_acc">Create new Account</string>
    <string name="no_network">No internet Connection</string>
    <string name="no_id_or_email">"please enter email or office ID "</string>
    <string name="no_login_pass">please enter your password</string>
    <string name="smth_missing">Something is missing</string>
    <string name="gender_missing">please select your gender</string>
    <string name="organization_not_selected">please select your organization</string>
    <string name="pass_not_match">passwords are not matching</string>
    <string name="pass_not_valid">Password must contain 1 capital letter, 1 special character and 1 number, and must be 7 to 12 character long</string>
    <string name="smth_wrong">Something went wrong</string>
    <string name="register">Register</string>
    <string name="permission_denied">permission is denied</string>
    <string name="email_or_id">Email or Office ID</string>
    <string name="pass">Password</string>
    <string name="invalid_email">please enter your valid email</string>
    <string name="invalid_email_pass">Invalid email or password</string>
    <string name="nothing_found">Found nothing</string>
    <string name="add_new_form">add new form</string>
    <string name="add_new_field">add new field</string>
    <string name="forms">All Forms</string>
    <string name="requests">Requests</string>
    <string name="staffs">Staffs</string>
    <string name="all_history">All history</string>
    <string name="create_new_form">Create new form</string>
    <string name="form_title">Form Title</string>
    <string name="field_title">Field Title</string>
    <string name="description">Description</string>
    <string name="form_title_empty">Form title can not be empty</string>
    <string name="long_form_title">Form title is very long</string>
    <string name="field_title_empty">Field title can not be empty</string>
    <string name="long_field_title">Field title is very long</string>
    <string name="desc_empty">Description can not be empty</string>
    <string name="long_desc">Description is very long</string>
    <string name="create_form">Create form</string>
    <string name="create_field">Create field</string>
    <string name="refreshing">refreshing …</string>
    <string name="done">done</string>
    <string name="approve_req">Approve request</string>
    <string name="delete_req">Delete request</string>
    <string name="fire_staff">Fire staff</string>
    <string name="re_appoint_staff">Re-appoint Staff</string>
    <string name="delete_form">Delete form</string>
    <string name="view_fired_staffs"><![CDATA[View fired staffs >>]]></string>
    <string name="view_deleted_requests"><![CDATA[View deleted requests >>]]></string>
    <string name="back_to_all_requests"><![CDATA[<< back to all requests]]></string>
    <string name="my_profile">My Profile</string>
    <string name="deleted">Deleted Requests</string>
    <string name="approved">Approved Requests</string>
    <string name="staff">Staff</string>
    <string name="organization">Organization</string>
    <string name="post">Post</string>
    <string name="re_select_org">Re-select Organization</string>
    <string name="chat_room">Chat Room</string>
    <string name="apply">Apply</string>
    <string name="use_form">Use form for text detection</string>
    <string name="gallery">Select from gallery</string>
    <string name="camera">Capture using camera</string>
    <string name="detect_text">Detect text</string>
    <string name="text_detection">Text Detection</string>
    <string name="before_image_selected">Upload the image of the form either from gallery or by capturing using camera to detect the handwritten text(data) filled in the form.</string>
    <string name="after_image_selected">If u have selected the wrong image then just select the another image either from gallery or camera. It will override the current image</string>
    <string name="no_img">You have not selected any image</string>
    <string name="filter_his">filter history</string>
    <string name="close_filter_opt">close filter options</string>
    <string name="view_dates">View dates</string>
    <string name="email_entered_than_id">Please enter your office id not your email address</string>
    <string name="p_sign_in">Request sent\nPlease sign in for technical purpose</string>
    <string name="record_data">Record Data</string>
    <string name="data_recorded">data recorded</string>
    <string name="records">Records</string>
    <string name="open_profile">open profile</string>
    <string name="fields">Fields</string>
    <string name="open_form">open form</string>
    <string name="created_by">Created by,</string>
    <string name="created_on">Created on,</string>
    <string name="request_text">has requested to be staff </string>
    <string name="approved_text">\'s request is approved and has become the former staff </string>
    <string name="deleted_text">\'s request is deleted by the admin </string>
    <string name="fired_text">is fired </string>
    <string name="save_path">Save Path</string>
    <string name="server_path">Server path</string>
    <string name="path_info">From here you can save/change your server path as per provided by the server during each runtime</string>
    <string name="change_server">Change Server</string>
    <string name="recorded_by">Recorded by,</string>
    <string name="recorded_on">Recorded on,</string>
</resources>