<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ocr.OCR"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black_transparent"
        >
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/back"
            app:tint="@color/white"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:onClick="close"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/text_detection"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="19sp"
            />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/beforeOCR"
        android:layout_above="@+id/ocrButton"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:scrollbars="none"
        android:visibility="visible"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            >

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_margin="10dp"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="italic"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/change_server"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:onClick="changeServerID"
                />

            <LinearLayout
                android:id="@+id/idSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_transparent"
                    />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="center_horizontal"
                    android:text="@string/path_info"
                    />

                <EditText
                    android:id="@+id/serverID"
                    android:inputType="number|numberDecimal"
                    android:digits="0123456789."
                    android:gravity="center"
                    style="@style/R_L_RT"
                    android:textColor="@color/black"
                    android:hint="@string/server_path"/>

                <Button
                    android:text="@string/save_path"
                    style="@style/B"
                    android:onClick="saveServerPath"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black_transparent"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/imageInfo"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:gravity="center_horizontal"
                />

            <ImageView
                android:id="@+id/selectedImage"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                />

            <LinearLayout
                android:onClick="selectFromGallery"
                style="@style/ANF_SBH"
                android:visibility="visible"
                >

                <ImageView
                    style="@style/ANF_SB"
                    android:src="@drawable/gallery"/>

                <TextView
                    android:text="@string/gallery"
                    style="@style/ANF_SBI"
                    />

            </LinearLayout>

            <LinearLayout
                android:onClick="clickUsingCamera"
                style="@style/ANF_SBH"
                android:visibility="visible">

                <ImageView
                    style="@style/ANF_SB"
                    android:src="@drawable/camera" />

                <TextView
                    android:text="@string/camera"
                    style="@style/ANF_SBI"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_above="@+id/ocrButton"
        android:id="@+id/ocrRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"/>

    <Button
        android:id="@+id/ocrButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/thick_base"
        android:backgroundTint="#217808"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="italic"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="buttonClicked"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>